<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.acromere.pom</groupId>
		<artifactId>jar</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>

	<groupId>com.acromere</groupId>
	<artifactId>zenna</artifactId>
	<version>0.12-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Zenna</name>
	<description>Icon library</description>
	<inceptionYear>2019</inceptionYear>

	<developers>
		<developer>
			<name>Mark Soderquist</name>
			<email>mark@soderquist.net</email>
			<roles>
				<role>Architect</role>
			</roles>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>acm</id>
			<url>https://repo.acromere.com/acm</url>
		</repository>
	</repositories>

	<properties>
		<!-- Version numbers updated 07 Mar 2023 -->

		<product-name>${project.name}</product-name>
		<product-identifier>${project.artifactId}</product-identifier>
		<project-timestamp>${maven.build.timestamp}</project-timestamp>

		<!-- Needs to stay at a version compatible with all projects and the website -->
		<!-- Keep consistent with the CI pipeline -->
		<java.version>21</java.version>

		<!-- Runtime dependencies -->
		<zerra.version>0.12-SNAPSHOT</zerra.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.acromere</groupId>
			<artifactId>zerra</artifactId>
			<version>${zerra.version}</version>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>compile</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- This configuration allows the JUnit test runner to find the unit tests -->
				<configuration>
					<argLine>
						--add-opens=com.acromere.zenna/com.acromere.zenna.icon=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>

